[gd_scene load_steps=14 format=3 uid="uid://cx6h3tck10s1g"]

[ext_resource type="Script" path="res://addons/dialogic/Modules/LayoutEditor/layout_editor.gd" id="1_mdhmx"]
[ext_resource type="PackedScene" uid="uid://dbpkta2tjsqim" path="res://addons/dialogic/Editor/Common/hint_tooltip_icon.tscn" id="2_ut05b"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/LayoutEditor/Components/layout_selection_page.gd" id="3_k3gf6"]
[ext_resource type="Texture2D" uid="uid://ptlnkdsl67tf" path="res://addons/dialogic/Modules/DefaultLayouts/Default/preview.png" id="4_f5hts"]
[ext_resource type="PackedScene" uid="uid://dpwhshre1n4t6" path="res://addons/dialogic/Editor/Events/Fields/ComplexPicker.tscn" id="5_5a633"]

[sub_resource type="Image" id="Image_6uver"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ts500"]
image = SubResource("Image_6uver")

[sub_resource type="Theme" id="Theme_l6tyr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tixgs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnnk3"]
content_margin_left = 10.0
content_margin_top = 25.0
content_margin_right = 10.0
content_margin_bottom = 25.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.494118, 0.494118, 0.494118, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0grhh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nh8y"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7xby"]
content_margin_left = 30.0
draw_center = false

[node name="StyleEditor" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdhmx")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.2
theme_type_variation = &"DialogicPanelA"

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBox/HBox2"]
layout_mode = 2
theme_type_variation = &"DialogicSubTitle"
text = "Styles"

[node name="HintTooltip" parent="Panel/VBox/HBox2" instance=ExtResource("2_ut05b")]
layout_mode = 2
tooltip_text = "Each layout-style consist of a preset or custom scene with it's configurations. 
You can use a specific layout by calling Dialogic.Styles.add_layout_style(@style_name) before Dialogic.start()."
texture = SubResource("ImageTexture_ts500")
hint_text = "Each layout-style consist of a preset or custom scene with it's configurations. 
You can use a specific layout by calling Dialogic.Styles.add_layout_style(@style_name) before Dialogic.start()."

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="AddButton" type="Button" parent="Panel/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add layout-style"
icon = SubResource("ImageTexture_ts500")

[node name="DuplicateButton" type="Button" parent="Panel/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Duplicate layout-style"
icon = SubResource("ImageTexture_ts500")

[node name="InheritButton" type="Button" parent="Panel/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Duplicate layout-style"
icon = SubResource("ImageTexture_ts500")

[node name="RemoveButton" type="Button" parent="Panel/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove layout-style"
icon = SubResource("ImageTexture_ts500")

[node name="StyleList" type="ItemList" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 2
item_0/text = "Default"
item_0/icon = SubResource("ImageTexture_ts500")
item_1/text = "SecondStyle"
item_1/icon = SubResource("ImageTexture_ts500")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme = SubResource("Theme_l6tyr")
theme_override_constants/separation = 0

[node name="LayoutStyleName" type="LineEdit" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DialogicTitle"
theme_override_styles/normal = SubResource("StyleBoxEmpty_tixgs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tixgs")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_tixgs")
text = "Default"
expand_to_text_length = true

[node name="MakeDefaultButton" type="Button" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
disabled = true
toggle_mode = true
text = "Is Default"

[node name="PanelContainer" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DialogicPanelB"

[node name="LayoutSelection" type="MarginContainer" parent="VBox/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("3_k3gf6")

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/PanelContainer/LayoutSelection"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_ts500")
flat = true

[node name="Label" type="Label" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/HBox"]
layout_mode = 2
theme_type_variation = &"DialogicSection"
text = "Select a layout"
vertical_alignment = 1

[node name="Panel" type="PanelContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel"]
layout_mode = 2

[node name="Scroll2" type="ScrollContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="LayoutSuggestions" type="FlowContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="LayoutSearch" type="LineEdit" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search for a preset"
right_icon = SubResource("ImageTexture_ts500")

[node name="Scroll" type="ScrollContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AllLayouts" type="FlowContainer" parent="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LayoutPreview" type="Control" parent="VBox/PanelContainer/LayoutSelection"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LayoutPreviewPanel" type="PanelContainer" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -131.0
offset_right = 292.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pnnk3")

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Previous" type="Button" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
icon = SubResource("ImageTexture_ts500")
flat = true

[node name="VBoxLeft" type="VBoxContainer" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Panel" type="PanelContainer" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxLeft"]
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0grhh")

[node name="LayoutPreviewImageBig" type="TextureRect" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxLeft/Panel"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_f5hts")
expand_mode = 5
stretch_mode = 6

[node name="VBoxRight" type="VBoxContainer" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
alignment = 1

[node name="LayoutName" type="Label" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
text = "Visual Novel"

[node name="LayoutAuthor" type="Label" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxRight"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.545098)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Jowan Spooner"

[node name="LayoutDescription" type="Label" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DialogicHintText"
theme_override_font_sizes/font_size = 16
text = "Visual Novel"
autowrap_mode = 3

[node name="ActivateLayoutButton" type="Button" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "Use"
icon = SubResource("ImageTexture_ts500")

[node name="Next" type="Button" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
icon = SubResource("ImageTexture_ts500")
flat = true

[node name="ClosePreview" type="Button" parent="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = SubResource("ImageTexture_ts500")
flat = true

[node name="StyleSettings" type="VBoxContainer" parent="VBox/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PanelContainer/StyleSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/PanelContainer/StyleSettings/HBoxContainer"]
layout_mode = 2
text = "Inherits:"

[node name="InheritancePicker" parent="VBox/PanelContainer/StyleSettings/HBoxContainer" instance=ExtResource("5_5a633")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Nothing (Base Style)"

[node name="InheritanceChain" type="Label" parent="VBox/PanelContainer/StyleSettings/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DialogicHintText"
text = "InheritanceChain"

[node name="SectionTitle1" type="HBoxContainer" parent="VBox/PanelContainer/StyleSettings"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/PanelContainer/StyleSettings/SectionTitle1"]
layout_mode = 2
theme_type_variation = &"DialogicSection"
text = "Layout (preset/scene)"

[node name="HintTooltip" parent="VBox/PanelContainer/StyleSettings/SectionTitle1" instance=ExtResource("2_ut05b")]
layout_mode = 2
tooltip_text = "This can either be a preset or a custom scene. "
texture = SubResource("ImageTexture_ts500")
hint_text = "This can either be a preset or a custom scene. "

[node name="Layout" type="HBoxContainer" parent="VBox/PanelContainer/StyleSettings"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBox/PanelContainer/StyleSettings/Layout"]
show_behind_parent = true
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0nh8y")

[node name="SceneImage" type="TextureRect" parent="VBox/PanelContainer/StyleSettings/Layout/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
expand_mode = 3
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="VBox/PanelContainer/StyleSettings/Layout"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SceneName" type="Label" parent="VBox/PanelContainer/StyleSettings/Layout/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Visual Novel"

[node name="SceneAuthor" type="Label" parent="VBox/PanelContainer/StyleSettings/Layout/Info"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.603922)
layout_mode = 2
text = "Jowan Spooner"

[node name="ChangeLayoutButton" type="Button" parent="VBox/PanelContainer/StyleSettings/Layout/Info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "Change"
icon = SubResource("ImageTexture_ts500")

[node name="SectionTitle2" type="HBoxContainer" parent="VBox/PanelContainer/StyleSettings"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/PanelContainer/StyleSettings/SectionTitle2"]
layout_mode = 2
theme_type_variation = &"DialogicSection"
text = "Configuration"

[node name="HintTooltip" parent="VBox/PanelContainer/StyleSettings/SectionTitle2" instance=ExtResource("2_ut05b")]
layout_mode = 2
tooltip_text = "Here you can modify any exposed settings of the preset or scene."
texture = SubResource("ImageTexture_ts500")
hint_text = "Here you can modify any exposed settings of the preset or scene."

[node name="ExportsTabs" type="TabContainer" parent="VBox/PanelContainer/StyleSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DialogicPanelA"
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_d7xby")

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tip: You can use CTRL+F5 to play the current timeline!"
horizontal_alignment = 2

[connection signal="pressed" from="Panel/VBox/HBox/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/InheritButton" to="." method="_on_inherit_button_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="focus_exited" from="VBox/HBox/LayoutStyleName" to="." method="_on_layout_style_name_focus_exited"]
[connection signal="text_submitted" from="VBox/HBox/LayoutStyleName" to="." method="_on_layout_style_name_text_submitted"]
[connection signal="pressed" from="VBox/HBox/MakeDefaultButton" to="." method="_on_make_default_button_pressed"]
[connection signal="pressed" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/HBox/Back" to="VBox/PanelContainer/LayoutSelection" method="_on_back_pressed"]
[connection signal="focus_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" method="_on_focus_entered" flags=18]
[connection signal="focus_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" method="_on_focus_exited" flags=18]
[connection signal="gui_input" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" method="_on_gui_input" flags=18]
[connection signal="mouse_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll2/LayoutSuggestions/Margin" method="_on_mouse_exited" flags=18]
[connection signal="text_changed" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/HBoxContainer/LayoutSearch" to="VBox/PanelContainer/LayoutSelection" method="_on_layout_search_text_changed"]
[connection signal="focus_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" method="_on_focus_entered" flags=18]
[connection signal="focus_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" method="_on_focus_exited" flags=18]
[connection signal="gui_input" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" method="_on_gui_input" flags=18]
[connection signal="mouse_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/Margin" method="_on_mouse_exited" flags=18]
[connection signal="focus_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" method="_on_focus_entered" flags=18]
[connection signal="focus_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" method="_on_focus_exited" flags=18]
[connection signal="gui_input" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" method="_on_gui_input" flags=18]
[connection signal="mouse_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64337" method="_on_mouse_exited" flags=18]
[connection signal="focus_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" method="_on_focus_entered" flags=18]
[connection signal="focus_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" method="_on_focus_exited" flags=18]
[connection signal="gui_input" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" method="_on_gui_input" flags=18]
[connection signal="mouse_entered" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" to="VBox/PanelContainer/LayoutSelection/VBoxContainer/Panel/VBoxContainer/Scroll/AllLayouts/@MarginContainer@64338" method="_on_mouse_exited" flags=18]
[connection signal="gui_input" from="VBox/PanelContainer/LayoutSelection/LayoutPreview" to="VBox/PanelContainer/LayoutSelection" method="_on_layout_preview_gui_input"]
[connection signal="pressed" from="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/Previous" to="VBox/PanelContainer/LayoutSelection" method="_on_preview_previous_pressed"]
[connection signal="pressed" from="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/VBoxRight/ActivateLayoutButton" to="VBox/PanelContainer/LayoutSelection" method="_on_activate_layout_button_pressed"]
[connection signal="pressed" from="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/HBoxContainer/Next" to="VBox/PanelContainer/LayoutSelection" method="_on_preview_next_pressed"]
[connection signal="pressed" from="VBox/PanelContainer/LayoutSelection/LayoutPreview/LayoutPreviewPanel/ClosePreview" to="VBox/PanelContainer/LayoutSelection" method="_on_close_preview_pressed"]
[connection signal="value_changed" from="VBox/PanelContainer/StyleSettings/HBoxContainer/InheritancePicker" to="." method="_on_inheritance_picker_value_changed"]
[connection signal="pressed" from="VBox/PanelContainer/StyleSettings/Layout/Info/ChangeLayoutButton" to="." method="_on_change_layout_button_pressed"]
